@@ -25,6 +25,7 @@ object PropertyUtils {
     "-XX:+ParallelRefProcEnabled",
     "-XX:MaxInlineLevel=20",
     "-XX:MaxTrivialSize=12",
+    "-XX:-UseBiasedLocking",
     "-Djava.net.preferIPv4Stack=true",
     "-Djava.net.preferIPv6Addresses=false"
   )
